[gd_scene load_steps=17 format=3 uid="uid://d3iceirfj21qw"]

[ext_resource type="Script" uid="uid://dng6kx20nqasv" path="res://scripts/ui/exploration_ui.gd" id="1_jvesw"]
[ext_resource type="Texture2D" uid="uid://37t534r3ua0p" path="res://sprites/kenny game icons/open-xflipped.png" id="2_m3jmt"]
[ext_resource type="PackedScene" uid="uid://boccd8l2p0s0r" path="res://scenes/ui/exploration_robot_info_ui.tscn" id="2_rfm22"]
[ext_resource type="Script" uid="uid://ccd5c8wiv7kia" path="res://scripts/ui/simple_map_ui.gd" id="3_4stpx"]
[ext_resource type="Script" uid="uid://dcq4t1cqwva08" path="res://scripts/robot_exploration_mapper.gd" id="3_2458l"]
[ext_resource type="PackedScene" uid="uid://dbvjynwqexkui" path="res://scenes/ui/compass_ui.tscn" id="3_eifl5"]
[ext_resource type="Script" uid="uid://dgpd7jxisqmya" path="res://scripts/ui/sonar_ui.gd" id="3_ld1f6"]
[ext_resource type="Texture2D" uid="uid://cev0382nhv46i" path="res://sprites/kenny game icons/arrowUp.png" id="3_rfm22"]
[ext_resource type="Texture2D" uid="uid://davhidpjbpjq2" path="res://sprites/kenny game icons/open.png" id="4_eifl5"]
[ext_resource type="Texture2D" uid="uid://bowjve07f2wq0" path="res://sprites/kenny game icons/arrowLeft.png" id="5_4stpx"]
[ext_resource type="Texture2D" uid="uid://c02to5i50bgby" path="res://sprites/kenny game icons/arrowDown.png" id="6_2458l"]
[ext_resource type="Script" uid="uid://ylartknudqvd" path="res://scripts/ui/isometric_map_ui.gd" id="6_ld1f6"]
[ext_resource type="Texture2D" uid="uid://bm8p8oa78pasu" path="res://sprites/kenny game icons/arrowRight.png" id="7_ld1f6"]
[ext_resource type="Texture2D" uid="uid://b0si5c0r424ag" path="res://sprites/kenny game icons/zoomOut.png" id="7_qy2fj"]
[ext_resource type="Script" uid="uid://qh2fg4pg2vqk" path="res://scripts/ui/map_controls_ui.gd" id="7_wpqvq"]
[ext_resource type="Texture2D" uid="uid://cn0wtlnus36b" path="res://sprites/kenny game icons/zoomIn.png" id="8_wpqvq"]

[node name="Exploration UI" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 952.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvesw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.382878, 0.0789909, 0.13108, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Top Margin" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
size_flags_stretch_ratio = 3.0

[node name="RobotInfo" parent="MarginContainer/VBoxContainer" node_paths=PackedStringArray("_exploration_ui") instance=ExtResource("2_rfm22")]
layout_mode = 2
_exploration_ui = NodePath("../../..")

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Sonar" type="ColorRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0.0901961, 0.0901961, 0.0901961, 0.6)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Sonar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="SonarUI" type="Control" parent="MarginContainer/VBoxContainer/Sonar/MarginContainer" node_paths=PackedStringArray("sonar_root", "sonar_label", "exploration_ui")]
layout_mode = 2
script = ExtResource("3_ld1f6")
sonar_root = NodePath("../..")
sonar_label = NodePath("../Sonar lvl make")
exploration_ui = NodePath("../../../../..")
bar_width = 8.015
bar_color = Color(1, 1, 1, 1)
update_frequency_msec = 300
look_direction_signal_bar_progress = 4.0
signal_speed = 0.002
look_direction_signal_speed = 0.01

[node name="Sonar lvl make" type="Label" parent="MarginContainer/VBoxContainer/Sonar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.443137)
theme_override_font_sizes/font_size = 6
text = "S100 Mk II"

[node name="SimpleMapModule" type="ColorRect" parent="MarginContainer/VBoxContainer" node_paths=PackedStringArray("_2d_map_ui", "_3d_map_ui", "map_controls", "_mapping_area")]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
color = Color(0.207843, 0.0862745, 0.105882, 1)
script = ExtResource("3_2458l")
_2d_map_ui = NodePath("Padding/Control/2D Map")
_3d_map_ui = NodePath("Padding/Control/3D Map")
map_controls = NodePath("Padding/Control/Map Controls")
_mapping_area = NodePath(".")

[node name="Padding" type="MarginContainer" parent="MarginContainer/VBoxContainer/SimpleMapModule"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/SimpleMapModule/Padding"]
layout_mode = 2

[node name="2D Map" type="Control" parent="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control" node_paths=PackedStringArray("exploration_ui")]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_4stpx")
line_color = Color(1, 1, 1, 0.345098)
player_color = Color(0.95, 0.95, 0.95, 0.937255)
ground_color = Color(0.482665, 0.262982, 0.0593273, 0.843137)
no_floor_color = Color(0.04416, 0.06, 0.0402, 0.937255)
feature_color = Color(0.379495, 0.71, 0.3621, 1)
illusion_color = Color(0.622587, 0.3256, 0.74, 0.776471)
wall_color = Color(0.82, 0.671717, 0.533, 0.937255)
exploration_ui = NodePath("../../../../../..")
metadata/_custom_type_script = "uid://ccd5c8wiv7kia"

[node name="3D Map" type="Control" parent="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_ld1f6")
draw_box_half = Vector3i(7, 1, 7)
camera_direction = Vector3(2, 5, 5)
floor_color = Color(0.72, 0.396, 0.396, 0.917647)
illusion_color = Color(0.557333, 0.28, 0.8, 1)
other_side_color = Color(0.8325, 0.9, 0.495, 0.537255)
player_color = Color(0.95, 0.95, 0.95, 0.94902)
feature_color = Color(0.168, 0.63, 0.126, 0.843137)
elevation_difference_alpha_factor = 0.2
line_width = 0.07
metadata/_custom_type_script = "uid://ylartknudqvd"

[node name="Map Controls" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control" node_paths=PackedStringArray("mode_2d_button", "mode_3d_button", "zoom_in_button", "zoom_out_button")]
custom_minimum_size = Vector2(0, 14)
layout_direction = 3
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 4
script = ExtResource("7_wpqvq")
mode_2d_button = NodePath("2D Map Button")
mode_3d_button = NodePath("3D Map Button")
zoom_in_button = NodePath("Zoom In Button")
zoom_out_button = NodePath("Zoom Out Button")

[node name="2D Map Button" type="Button" parent="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls"]
auto_translate_mode = 2
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "2D"

[node name="3D Map Button" type="Button" parent="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls"]
auto_translate_mode = 2
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "3D"

[node name="Zoom In Button" type="Button" parent="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls"]
auto_translate_mode = 2
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
icon = ExtResource("8_wpqvq")
expand_icon = true

[node name="Zoom Out Button" type="Button" parent="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls"]
auto_translate_mode = 2
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
icon = ExtResource("7_qy2fj")
expand_icon = true

[node name="CompassModule" parent="MarginContainer/VBoxContainer" node_paths=PackedStringArray("exploration_ui") instance=ExtResource("3_eifl5")]
layout_mode = 2
exploration_ui = NodePath("../../..")

[node name="Exploration Movement Controls" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="Turn Left" type="Button" parent="MarginContainer/VBoxContainer/Exploration Movement Controls"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("2_m3jmt")
icon_alignment = 1
expand_icon = true

[node name="Forward" type="Button" parent="MarginContainer/VBoxContainer/Exploration Movement Controls"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("3_rfm22")
icon_alignment = 1
expand_icon = true

[node name="Turn Right" type="Button" parent="MarginContainer/VBoxContainer/Exploration Movement Controls"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("4_eifl5")
icon_alignment = 1
expand_icon = true

[node name="Strafe Left" type="Button" parent="MarginContainer/VBoxContainer/Exploration Movement Controls"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("5_4stpx")
icon_alignment = 1
expand_icon = true

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Exploration Movement Controls"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("6_2458l")
icon_alignment = 1
expand_icon = true

[node name="Strafe Right" type="Button" parent="MarginContainer/VBoxContainer/Exploration Movement Controls"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("7_ld1f6")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls/2D Map Button" to="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls" method="_on_2d_map_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls/3D Map Button" to="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls" method="_on_3d_map_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls/Zoom In Button" to="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls" method="_on_zoom_in_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls/Zoom Out Button" to="MarginContainer/VBoxContainer/SimpleMapModule/Padding/Control/Map Controls" method="_on_zoom_out_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exploration Movement Controls/Turn Left" to="." method="_on_turn_left_pressed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Exploration Movement Controls/Forward" to="." method="_on_forward_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Exploration Movement Controls/Forward" to="." method="_on_forward_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exploration Movement Controls/Turn Right" to="." method="_on_turn_right_pressed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Exploration Movement Controls/Strafe Left" to="." method="_on_strafe_left_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Exploration Movement Controls/Strafe Left" to="." method="_on_strafe_left_button_up"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Exploration Movement Controls/Back" to="." method="_on_back_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Exploration Movement Controls/Back" to="." method="_on_back_button_up"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Exploration Movement Controls/Strafe Right" to="." method="_on_strafe_right_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Exploration Movement Controls/Strafe Right" to="." method="_on_strafe_right_button_up"]
